# ancpi-data-aggregator

./: .gitignore  README.md  applications_table.csv  main.py  mortgage_table.csv  pyproject.toml  selling_table.csv  test.py  test_applications_compiled.ipynb  test_applications_table.ipynb  test_mortgage_compiled.ipynb  test_mortgage_table.ipynb  test_selling_compiled.ipynb  test_selling_table.ipynb
ancpi_aggregator/: __init__.py
ancpi_aggregator/scraping/: scraper.py
src/ancpi_aggregator/: __init__.py
src/ancpi_aggregator/transforming/: transformer.py
